kubernetes.docker/k8s-lab-02/lab02d-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # The port the service will listen on
      targetPort: 80 # The port the NGINX container listens on
      nodePort: 30080 # Optional: Specify a port in the 30000-32767 range. If omitted, Kubernetes assigns one.
